# middle-python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: app.py  db.py  utils.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
